--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Aprendiendo Bootstrap 5 y Sass",
   "main": "index.js",
   "scripts": {
-    "compilar:sass": "sass --watch src/scss:build/css"
+    "compilar:sass": "sass --watch src/scss:build/css",
+    "build:sass": "purgecss --css build/css/style.css --content index.html --output build/css/meeti.css"
   }
   ,
   "author": "Mariano Masondo",
